<resources>
    <string name="app_name">      Spinner </string>
    <string name="LoginBtn">Login</string>
    <string name="LoginText">Lets Get Started !</string>
    <string name="Emailtxt">Enter Email</string>
    <string name="PasswordTxt">Enter Password</string>
    <string name="UserProfiletxt">User Profile</string>
    <string name="UpdateProfileButton">Update My Details</string>
    <string name="DeleteProfileButton">Delete</string>
    <string name="getEmailInput">XXXXXXX@XXXXXX.com</string>
    <string name="getUserName">XXXXXX XXXXXXXX</string>
    <string name="getUserPassword" />
    <string name="maleRadioButton">Male</string>
    <string name="femaleRadioButton">Female</string>
    <string name="createAccountBtn">Submit</string>
    <string name="switchX" />
    <string name="dummyText">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed doae</string>
    <string name="getCyclerID">Cycler ID</string>
    <string name="SubmitBtn">Submit</string>
    <string name="getUserCreditCardNo" />
    <string name="getUserNIC" />
    <string name="privacyPolicyText">Agree to privacy and policy terms</string>
    <string name="getUserAddresss" />
    <string name="getUserMobileNo" />
    <string name="getBikeID">"Enter Order ID : "</string>
    <string name="searchBtn">Go</string>
    <string name="homeBtn">Home</string>
    <string name="deleteOrder">Delete</string>
    <string name="creditCard">Credit Card</string>
    <string name="LoginMainGreeting">Spinner</string>
    <string name="action_settings">Settings</string>
    <string name="full_price">Full Price</string>
    <string name="discount_amount">Discount</string>
    <string name="price_with_discount">Price with Discount</string>
    <string name="Welcome">Welcome</string>
    <string name="btnRent">RENT</string>
    <string name="btnDonate">Donate</string>
    <string name="Loyality">  GOLD</string>
    <string name="points">97</string>
    <string name="size_txt">Choose a size</string>
    <string name="smalltxt">Small</string>
    <string name="txtpremium">Premium</string>
    <string name="cycleID">Cycle ID:</string>
    <string name="PriceView">Price:</string>
    <string name="TimeView">Time:</string>
    <string name="DateView">Date:</string>
    <string name="SizeView">Bike Size:</string>
    <string name="PremiumView">Premium:</string>
    <string name="ID">xxxxxxxx</string>
    <string name="pricetxt">100RS/h</string>
    <string name="Timetxt">0100h</string>
    <string name="SizetxtView">Medium</string>
    <string name="PremiumtxtView">N/A</string>
    <string name="Start">START RIDING</string>
    <string name="Price">To pay:</string>
    <string name="TtimeView">Total time</string>
    <string name="Redeem">Redeem loyality points</string>
    <string name="toPay">500RS</string>
    <string name="Time">5</string>
    <string name="Timef">5h</string>
    <string name="Donatebtn">Donate</string>
    <string name="BtnTarget">SET TARGET</string>
    <string name="End_ride">END RIDE</string>
    <string name="Weekly_target">WEEKLY TARGET</string>
    <string name="Time_remaining">2 hours</string>
    <string name="target">CHANGE TARGET</string>
    <string name="start">Start</string>
    <string name="Paymenttxt">Pay</string>
    <string name="Choosebtn">Choose</string>
    <string name="orderDateView" />
    <string name="OrderDateView">01/05/2022</string>
    <string name="largebiketxt">Large</string>
    <string name="ADD">ADD A BICYCLE</string>
    <string name="SPIN">BIKES AT SPINNER</string>
    <string name="UPDATE">SPINNER BICYCLE REVIEW</string>
    <string name="DELETE">DELETE BICYCLE ADDITION</string>
    <string name="UPGRADE">UPGRADE YOUR BICYCLE</string>
    <string name="Bike_123">FirstBicycle</string>
    <string name="id123">Enter Bicycle ID:</string>
    <string name="ids">Enter Bicycle Name:</string>
    <string name="bike">bike</string>
    <string name="string_bike">bike12345</string>
    <string name="string_string_bike" />
    <string name="view_bicycle_details">VIEW BICYCLE DETAILS</string>
    <string name="bike1image">bike1image</string>
    <string name="click">Click On Image To View Details</string>
    <string name="biking">biking</string>
    <string name="image_a">imageA</string>
    <string name="text_ID1">Enter Bicycle ID:</string>
    <string name="text_ID2">Enter Bicycle Name:</string>
    <string name="text_ID3">Enter Bicycle Brand:</string>
    <string name="text_ID4">Enter Date Of Manufacture:</string>
    <string name="text_1">XYZXYZXYZ</string>
    <string name="TEXT_2">XLR8</string>
    <string name="text_3">TOMAHAWK</string>
    <string name="text_4">12.02.1999</string>
    <string name="text_7"><![CDATA[Agree To Privacy Policy & Terms]]></string>
    <string name="butt_01">SUBMIT</string>
    <string name="name_bike">TOMAHAWK XLR8</string>
    <string name="rating_id">BIKE RATING:</string>
    <string name="rat_value">70%</string>
    <string name="app_value">BIKER APPROVAL RATING:</string>
    <string name="app_values_count">20%</string>
    <string name="txt_ID">Give Us Your Bike Rating</string>
    <string name="butt_02">SUBMIT</string>
    <string name="rat_id_123">Give Us Your Bike Approval</string>
    <string name="motor">motor</string>
    <string name="info_1">Bicycle ID: XYZYXZ</string>
    <string name="bike_info2">Bicycle Name: Giant RX</string>
    <string name="bik_bra">Bicycle Brand: BMX</string>
    <string name="bik_or">Country Of Origin: Japan</string>
    <string name="bik_man">Manufacture Date: 12.08.2001</string>
    <string name="top_1">Bicycle Information</string>
    <string name="textview123">Our Bicycle Collection</string>
    <string name="txt_01">Our Bicycle Collection</string>
    <string name="but_01">Inspect</string>
    <string name="letsride">letsride</string>
    <string name="img">img</string>
    <string name="review_01">Spinner Bicycle Review</string>
    <string name="cat_text02">Enter The Bicycle ID</string>
    <string name="id_num_review">XYZYYXXZ</string>
    <string name="delete">Do You Want To Remove Your Bicycle Addition ?</string>
    <string name="checkbox">Yes!!!</string>
    <string name="plz_001">Enter The Bicycle ID:</string>
    <string name="bike_ID">XYXYXZ</string>
    <string name="upgrades_1">Bicycle Upgrades At Spinner</string>
    <string name="symbol">symbol</string>
    <string name="prefe_rences">Select Your Upgrades</string>
    <string name="g_1">Gears</string>
    <string name="radio_1">Equip</string>
    <string name="up_2">Dropper SeatPost</string>
    <string name="txt_tyre">Tubeless Conversion</string>
    <string name="image_vvv">image_vvv</string>
    <string name="ok_button_id">OK</string>
    <string name="spinner_open_tout_2021">Spinner Open Tour 2021</string>
    <string name="txtfranceTour">France Tour 2021</string>
    <string name="captE2">France Tour 2021</string>
    <string name="Date1">10/10/2021 to 12/10/2021</string>
    <string name="description1">France Tour 2021 will start on 10th of October. Registration is now open. Register Now!</string>
    <string name="DescriptionLink">https://bit.ly/fdnFG=dvT</string>
    <string name="Caption1">Spinner Open Tour 2021</string>
    <string name="Date2">08/21/2021 to 08/28/2021</string>
    <string name="Description3">Spinner Open Tour 2021 will start on 21st August 2021.  Confirm your participation!</string>
    <string name="swtBtn">I\'m going</string>
    <string name="textBTN">Text</string>
    <string name="searchBtn1">Search</string>
    <string name="editBtn">Edit</string>
    <string name="deleteBtn">Delete</string>
    <string name="swchBtn">Publish</string>
    <string name="addbnrBtn">Add Banner</string>
    <string name="captionE">7 Days Event</string>
    <string name="DateE">20/11/2021 to 22/11/2021</string>
    <string name="DescriptionE">Comming soon!</string>
    <string name="btnDone">Done</string>
    <string name="DeleteText">What is the reason to delete this event?</string>
    <string name="deleteReason">Testing Delete</string>
    <string name="delleteBtn">Delete</string>
    <string name="CreateEN">Event Name</string>
    <string name="EventSD">Starting Date</string>
    <string name="EventED">Ending Date</string>
    <string name="createDes">Description</string>
    <string name="CreateEData">7 Day Event</string>
    <string name="DataDate">20/11/2021</string>
    <string name="DataEdate">22/11/2021</string>
    <string name="dataDes">Comming soon!</string>
    <string name="event">Event</string>
    <string name="startTime">Start</string>
    <string name="dashmark">-</string>
    <string name="Remaining">testing</string>
    <string name="Estatus">Status</string>
    <string name="Edelete">Delete</string>
    <string name="update_status">Update Status</string>
    <string name="Emore_info">More Info</string>
    <string name="Eend">End</string>
    <string name="Ed_remainig">D Remainig</string>
    <string name="E_100">100</string>
    <string name="Eevent_name">Event Name</string>
    <string name="Eevent_id">Event ID</string>
    <string name="EEevent_id">Event ID</string>
    <string name="EEstatus">Status</string>
    <string name="Eestarting_date">Starting Date</string>
    <string name="EEending_date">Ending Date</string>
    <string name="web_link">Web Link</string>
    <string name="banner_link">Banner Link</string>
    <string name="Edd_mm_yyyy">dd/mm/yyyy</string>
    <string name="EEdd_mm_yyyy">dd/mm/yyyy</string>
    <string name="todo">TODO</string>
    <string name="enter_email">Enter Email :</string>
    <string name="enter_password">Enter Password:</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_account">Create Account</string>
    <string name="loginpic">LoginPic1</string>
    <string name="order_a_bike1">Order A bike</string>
    <string name="log_out">Log out</string>
    <string name="mytasks1">myTasks</string>
    <string name="todo2">TODO</string>
    <string name="todoxs">TODOxs</string>
    <string name="enter_your_email1">Enter Your email</string>
    <string name="enter_your_name2">Enter Your name</string>
    <string name="enter_your_phone_no">Enter your phone no :</string>
    <string name="update_details1">Update Details</string>
    <string name="order_a_bike4">Order a Bike</string>
    <string name="enter_your_nic">Enter your NIC :</string>
    <string name="calculate_cost">Calculate Cost</string>
    <string name="enter_your_cycler_id4">Enter your Cycler ID :</string>
    <string name="enter_your_mobiile_no">Enter your mobiile No :</string>
    <string name="pick_your_bicycle">Pick your Bicycle :</string>
    <string name="see_our_collections">See our collections</string>
    <string name="jajaj">jajaj</string>
    <string name="topic">Topic</string>
    <string name="save_task6">Save Task</string>
    <string name="show_my_tasks4">Show My Tasks</string>
    <string name="create_my_task">Create My Task</string>
    <string name="enter_description">Enter description</string>
    <string name="my_tasks1">My Tasks</string>
    <string name="dashboard">Dashboard</string>
    <string name="good_day_to_ride">Good Day To Ride</string>
    <string name="_21_c">21 C</string>
    <string name="wed">Wed</string>
    <string name="sun">Sun</string>
    <string name="thu">Thu</string>
    <string name="good_morning">Good Morning</string>
    <string name="enter_offer_discount">Enter Offer Discount:</string>
    <string name="enter_bike_price">Enter Bike Price :</string>
    <string name="enter_spinner_points">Enter Spinner Points :</string>
    <string name="shipping_cost_500rs_included">Shipping Cost : 500Rs included</string>
    <string name="calculate">Calculate</string>
    <string name="estimated_cost">Estimated Cost :</string>
</resources>